objects/Standard_Goal_Sales_Role__c.object
<CustomObject>
    <description>One or many Business Titles may be associated with a Goal Template.</description>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>SGSR{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sales_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Title</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Value_Type__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Value_Type__c.Category__c</field>
                <operation>equals</operation>
                <value>Business Title</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Value_Type__c</referenceTo>
        <relationshipName>Standard_Goal_Sales_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Goal__c</fullName>
        <label>Goal Template</label>
        <referenceTo>Standard_Goal__c</referenceTo>
        <relationshipLabel>Goal Template Business Titles</relationshipLabel>
        <relationshipName>Standard_Goal_Sales_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Goal Template Business Title</label>
    <nameField>
        <label>Goal Template Business Title Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Template Business Titles</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Every record starts here</description>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>